fix(core): resolve warnings, deprecated constructors, and unused variables
Tiến hành xóa các biến thừa và các đoạn mã gây ra cảnh báo Deprecated trong hệ thống. Điều này giúp code gọn gàng hơn và tránh rủi ro bảo trì trong tương lai.